lab0425/simpleCanary/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.test.pri  # 이 라인 대신 http: 라고 작성하면 IP로 접근근
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-svc
              port:
                number: 80
